--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href=""/>
+        <link rel="stylesheet" href="file:///C:/github/rsschool-cv/style.css"/>
+        <link rel="stylesheet" href="file:///C:/github/rsschool-cv/fonts/fonts.css">
         <title>CV Elena Leusik</title>
     </head>
     <body>
-        <header>
-
-        </header>
+        <div class="container">
         <main>
             <aside>
-                <h1>Elena Leusik</h1>
+                <h1 class="Elena">Elena</h1>
+                <h1 class="Leusik">Leusik</h1>
                 <img src="file:///C:/github/rsschool-cv/images/CV_Leusik.jpg" alt="Leusik Elena" width="300px" height="400">                
                 <h2>Contacts</h2>
                 <ul>
@@ -22,6 +22,7 @@
                 </ul>                     
             </aside>
             <section>
+                <div class="padding">
                 <h2>Summary</h2>
                      <p>Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.</p> 
                 <h2>Technical Skills</h2>
@@ -62,11 +63,12 @@
                 <h2>English Level</h2>
                      <p>B2  
                          Advanced course of medical English in BSMU</p>                
-            </section>           
+            </section>   
+                    </div>        
         </main>
         <footer>
-            <p><a href="https://github.com/elen-jagger">Elen-jagger</a>, 2021</p>
-            <p><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" border="0"></a> </p>
+            <p><a href="https://github.com/elen-jagger">Elen-jagger</a>, 2021. <a href="https://rs.school/js/"> <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" border="0"></a></p>            
         </footer>
+        </div>
     </body>
 </html>
