refactor: apply flex styles

--- a/index.html
+++ b/index.html
@@ -2,73 +2,83 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="file:///C:/github/rsschool-cv/style.css"/>
-        <link rel="stylesheet" href="file:///C:/github/rsschool-cv/fonts/fonts.css">
+        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./fonts/fonts.css" />
+
         <title>CV Elena Leusik</title>
     </head>
     <body>
         <div class="container">
-        <main>
-            <aside>
-                <h1 class="Elena">Elena</h1>
-                <h1 class="Leusik">Leusik</h1>
-                <img src="file:///C:/github/rsschool-cv/images/CV_Leusik.jpg" alt="Leusik Elena" width="300px" height="400">                
-                <h2>Contacts</h2>
-                <ul>
-                    <li>Location: Minsk, Belarus</li>
-                    <li>Telephone number: +375(29)3401875</li>
-                    <li>E-mail: elena.leusik@gmail.com</li>
-                    <li>Github: <a href="https://github.com/elen-jagger">elen-jagger</a></li>
-                </ul>                     
-            </aside>
-            <section>
-                <div class="padding">
-                <h2>Summary</h2>
-                     <p>Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.</p> 
-                <h2>Technical Skills</h2>
-                <ul>
-                    <li>Programming languages and technologies: HTML, CSS, JavaScript</li>
-                    <li>Programming practices: Agile, Kanban</li>
-                    <li>Tools: Git, VS Code, Adobe Photoshop, Adobe Lightroom, Adobe Illustrator, SPSS Statistics</li>
-                    <li>Other skills: research work, data search (on [PubMed](https://pubmed.ncbi.nlm.nih.gov/) and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
-                </ul>                     
-                <h2>Code Sample</h2>
-                     <p><a href="https://www.codewars.com/kata/526c7363236867513f0005ca">Codewars</a>
-                     <pre>
-                         <code>
-                            function isLeapYear(year){
-                                if( year%4 == 0 ){
-                                  return( !( year%100 == 0 ) ||  year%400 == 0 )
-                                }else{ return false }
-                              }
-                         </code>
-                     </pre>
-                     </p>
-                <h2>Education and Professional Experience</h2>
-                <ul>                    
-                    <li>IT
+            <main>
+                <aside>
+                    <h1 class="Elena">Elena</h1>
+                    <h1 class="Leusik">Leusik</h1>
+                    <img src="file:///C:/github/rsschool-cv/images/CV_Leusik.jpg" alt="Leusik Elena" width="300px" height="400">                
+                    <h2>Contacts</h2>
+                    <ul>
+                        <li>Location: Minsk, Belarus</li>
+                        <li>Telephone number: +375(29)3401875</li>
+                        <li>E-mail: elena.leusik@gmail.com</li>
+                        <li>Github: <a href="https://github.com/elen-jagger">elen-jagger</a></li>
+                    </ul>                     
+                </aside>
+                <section>
+                    <div class="padding">
+                        <h2>Summary</h2>
+                        <p>Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.</p> 
+                        <h2>Technical Skills</h2>
                         <ul>
-                            <li>Self-education - <a href="https://learn.javascript.ru/">JavaScript guide</a></li>
-                            <li>Rolling scopes school</li>
-                        </ul>
-                    </li>
-                    <li>Medicine
-                        <ul>
-                            <li>Belarusian State Medical University (General Medicine)</li>
-                            <li>Belarusian Medical Academy of Postgraduate Studies (Radiology)</li>
-                            <li>Candidate of Sciences in Medicine degree</li>
-                        </ul>
-                    </li>
-                </ul>                     
-                <h2>English Level</h2>
-                     <p>B2  
-                         Advanced course of medical English in BSMU</p>                
-            </section>   
-                    </div>        
-        </main>
-        <footer>
-            <p><a href="https://github.com/elen-jagger">Elen-jagger</a>, 2021. <a href="https://rs.school/js/"> <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" border="0"></a></p>            
-        </footer>
+                            <li>Programming languages and technologies: HTML, CSS, JavaScript</li>
+                            <li>Programming practices: Agile, Kanban</li>
+                            <li>Tools: Git, VS Code, Adobe Photoshop, Adobe Lightroom, Adobe Illustrator, SPSS Statistics</li>
+                            <li>Other skills: research work, data search (on [PubMed](https://pubmed.ncbi.nlm.nih.gov/) and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
+                        </ul>                     
+                        <h2>Code Sample</h2>
+                        <p>
+                            <a href="https://www.codewars.com/kata/526c7363236867513f0005ca">Codewars</a>
+                            <pre>
+                                <code>
+    function isLeapYear(year) {
+        if ( year%4 == 0 ) {
+            return( !( year%100 == 0 ) ||  year%400 == 0 )
+        } else { return false; }
+    }
+                                </code>
+                            </pre>
+                        </p>
+                        <h2>Education and Professional Experience</h2>
+                        <ul>                    
+                            <li>IT
+                                <ul>
+                                    <li>Self-education - <a href="https://learn.javascript.ru/">JavaScript guide</a></li>
+                                    <li>Rolling scopes school</li>
+                                </ul>
+                            </li>
+                            <li>Medicine
+                                <ul>
+                                    <li>Belarusian State Medical University (General Medicine)</li>
+                                    <li>Belarusian Medical Academy of Postgraduate Studies (Radiology)</li>
+                                    <li>Candidate of Sciences in Medicine degree</li>
+                                </ul>
+                            </li>
+                        </ul>                     
+                        <h2>English Level</h2>
+                        <p>
+                            B2<br />
+                            Advanced course of medical English in BSMU
+                        </p>
+                    </div>                
+                </section>               
+            </main>
+            <footer>
+                <div class="author">
+                    <a href="https://github.com/elen-jagger">Elen-jagger</a>
+                    <span class="year">, 2021.</span>
+                    <a href="https://rs.school/js/">
+                        <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" border="0" />
+                    </a>
+                </div>            
+            </footer>
         </div>
     </body>
 </html>
