fix: html validator

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="container">
             <main>
                 <aside>
-                    <h1 class="Elena">Elena</h1>
-                    <h1 class="Leusik">Leusik</h1>
-                    <img src="file:///C:/github/rsschool-cv/images/CV_Leusik.jpg" alt="Leusik Elena" width="300px" height="400">                
+                    <h1 class="elena">Elena</h1>
+                    <h1 class="leusik">Leusik</h1>
+                    <img src="./images/CV_Leusik.jpg" alt="Leusik Elena" width="300" height="400">                
                     <h2>Contacts</h2>
                     <ul>
                         <li>Location: Minsk, Belarus</li>
@@ -34,18 +34,19 @@
                             <li>Other skills: research work, data search (on [PubMed](https://pubmed.ncbi.nlm.nih.gov/) and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
                         </ul>                     
                         <h2>Code Sample</h2>
-                        <p>
+                        <div>
                             <a href="https://www.codewars.com/kata/526c7363236867513f0005ca">Codewars</a>
-                            <pre>
+                            <pre>                         
                                 <code>
-    function isLeapYear(year) {
-        if ( year%4 == 0 ) {
-            return( !( year%100 == 0 ) ||  year%400 == 0 )
-        } else { return false; }
-    }
+                                
+function isLeapYear(year) {
+    if (year % 4 == 0) {
+        return(!(year % 100 == 0) ||  year % 400 == 0)
+    } else { return false; }
+}
                                 </code>
                             </pre>
-                        </p>
+                        </div>
                         <h2>Education and Professional Experience</h2>
                         <ul>                    
                             <li>IT
@@ -75,7 +76,7 @@
                     <a href="https://github.com/elen-jagger">Elen-jagger</a>
                     <span class="year">, 2021.</span>
                     <a href="https://rs.school/js/">
-                        <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" border="0" />
+                        <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" />
                     </a>
                 </div>            
             </footer>
