--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <aside>
                     <h1 class="elena">Elena</h1>
                     <h1 class="leusik">Leusik</h1>
-                    <img src="./images/CV_Leusik.jpg" alt="Leusik Elena" width="300" height="400">                
+                    <img class="avatar" src="./images/CV_Leusik.jpg" alt="Leusik Elena" />                
                     <h2>Contacts</h2>
                     <ul>
                         <li>Location: Minsk, Belarus</li>
@@ -25,13 +25,17 @@
                 <section>
                     <div class="padding">
                         <h2>Summary</h2>
-                        <p>Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.</p> 
+                        <details>
+                            <summary>
+                                Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.
+                            </summary>
+                        </details> 
                         <h2>Technical Skills</h2>
                         <ul>
                             <li>Programming languages and technologies: HTML, CSS, JavaScript</li>
                             <li>Programming practices: Agile, Kanban</li>
                             <li>Tools: Git, VS Code, Adobe Photoshop, Adobe Lightroom, Adobe Illustrator, SPSS Statistics</li>
-                            <li>Other skills: research work, data search (on [PubMed](https://pubmed.ncbi.nlm.nih.gov/) and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
+                            <li>Other skills: research work, data search (on <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a> and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
                         </ul>                     
                         <h2>Code Sample</h2>
                         <div>
@@ -76,7 +80,7 @@ function isLeapYear(year) {
                     <a href="https://github.com/elen-jagger">Elen-jagger</a>
                     <span class="year">, 2021.</span>
                     <a href="https://rs.school/js/">
-                        <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="100" height="50" />
+                        <img class="rs-school-img" src="https://rs.school/images/rs_school_js.svg" alt="RS School" />
                     </a>
                 </div>            
             </footer>
