--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">       
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap">
-
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+        <script>hljs.initHighlightingOnLoad();</script>
         <title>CV Elena Leusik</title>
     </head>
     <body>
@@ -129,9 +131,10 @@ function rgb(r, g, b){
                     <article class="section-article">
                         <h3 id="Project">Project</h3>
                         <hr>  
-                        <p>Custom video player</p>                        
+                        <h3>Custom video player</h3>
+                        <p>Video player for Museum project. Made using Html, CSS and Js.</Html></p>                        
                         <div class="project">
-                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/">
+                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
                             <img class="project-img" src="./images/video_player.jpg" alt="video player" />
                             </a>
                         </div>
@@ -161,7 +164,24 @@ function rgb(r, g, b){
 
     btn.addEventListener('click', ToggleMenu);
     
-    console.log('hello');
+    console.log('самооценка 150 баллов');
+    console.log('вёрстка валидная +10');
+    console.log('вёрстка семантическая +20ю В коде страницы присутствуют семантические теги HTML5: article, aside, figure, footer, header, main, nav, section, используются заголовки h1, h2, h3');
+    console.log('для оформления СV используются css-стили +10');
+    console.log('контент размещается в блоке, который горизонтально центрируется на странице. Фонового цвета нет +10');
+    console.log('вёрстка адаптивная: ни на одном из разрешений экрана до 320px включительно не появляется горизонтальная полоса прокрутки, при этом всё содержание страницы сохраняется +10');
+    console.log('есть адаптивное бургер-меню для разрешения 768 и нижею Ссылки в пунктах меню ведут на основные разделы CV. При кликах по пунктам меню реализована плавная прокрутка по якорям. При уменьшении ширины экрана меню становится адаптивным.  +10');
+    console.log('на странице СV присутствует изображение - фото или аватарка автора CV, пропорции изображения не искажены, у изображения есть атрибут alt +10');
+    console.log('контакты для связи и перечень навыков оформлены в виде списка ul > li +10');
+    console.log('CV содержит контакты для связи, краткую информацию о себе, перечень навыков, информацию об образовании и уровне английского +10');
+    console.log('CV содержит пример вашего кода (например, решение задачи с сайта codewars) с подсветкой кода. +10');
+    console.log('CV содержит изображения-ссылки на выполненные вами проекты. При клике по изображению страница проекта открывается в новой вкладке. У каждого проекта есть название, небольшое описание, указан перечень используемых технологий. +10');
+    console.log('CV выполнено на английском языке +10');
+    console.log('выполнены требования к Pull Request (!!! ссылка на Pull Request: https://github.com/elen-jagger/rsschool-cv/pull/4): есть ссылка на задание, скриншот страницы СV, ссылка на деплой страницы CV на GitHub Pages, выполнена самооценка (самооценку расписываем по пунктам критериев оценки, указывая балл за каждый пункт) +10');
+    varconsole.log('видео нет - 0');
+    varconsole.log('дизайн, оформление, качество выполнения CV не ниже чем в примерах CV, приведённых в материалах к заданию  +10');
         </script>
     </body>
 </html>
+
+
