--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function rgb(r, g, b){
                         <h3 id="Project">Project</h3>
                         <hr>  
                         <h3>Custom video player</h3>
-                        <p>Video player for Museum project. Made using Html, CSS and Js.</Html></p>                        
+                        <p>Video player for Museum project. Made using Html5, CSS3 and Js.</Html></p>                        
                         <div class="project">
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
                             <img class="project-img" src="./images/video_player.jpg" alt="video player" />
@@ -152,35 +152,35 @@ function rgb(r, g, b){
                 </div>            
             </footer>
         </div>
-        <script>
+    <script>
             
-    const btn = document.querySelector('.burger-btn');
-    const menu = document.querySelector('.menu');
+        const btn = document.querySelector('.burger-btn');
+        const menu = document.querySelector('.menu');
 
-    function ToggleMenu() {
-        btn.classList.toggle("open");               
-        menu.classList.toggle("menu-open");  
-    }
+        function toggleMenu() {
+            btn.classList.toggle("open");               
+            menu.classList.toggle("menu-open");  
+        }
 
-    btn.addEventListener('click', ToggleMenu);
+        btn.addEventListener('click', toggleMenu);
     
-    console.log('самооценка 150 баллов');
-    console.log('вёрстка валидная +10');
-    console.log('вёрстка семантическая +20ю В коде страницы присутствуют семантические теги HTML5: article, aside, figure, footer, header, main, nav, section, используются заголовки h1, h2, h3');
-    console.log('для оформления СV используются css-стили +10');
-    console.log('контент размещается в блоке, который горизонтально центрируется на странице. Фонового цвета нет +10');
-    console.log('вёрстка адаптивная: ни на одном из разрешений экрана до 320px включительно не появляется горизонтальная полоса прокрутки, при этом всё содержание страницы сохраняется +10');
-    console.log('есть адаптивное бургер-меню для разрешения 768 и нижею Ссылки в пунктах меню ведут на основные разделы CV. При кликах по пунктам меню реализована плавная прокрутка по якорям. При уменьшении ширины экрана меню становится адаптивным.  +10');
-    console.log('на странице СV присутствует изображение - фото или аватарка автора CV, пропорции изображения не искажены, у изображения есть атрибут alt +10');
-    console.log('контакты для связи и перечень навыков оформлены в виде списка ul > li +10');
-    console.log('CV содержит контакты для связи, краткую информацию о себе, перечень навыков, информацию об образовании и уровне английского +10');
-    console.log('CV содержит пример вашего кода (например, решение задачи с сайта codewars) с подсветкой кода. +10');
-    console.log('CV содержит изображения-ссылки на выполненные вами проекты. При клике по изображению страница проекта открывается в новой вкладке. У каждого проекта есть название, небольшое описание, указан перечень используемых технологий. +10');
-    console.log('CV выполнено на английском языке +10');
-    console.log('выполнены требования к Pull Request (!!! ссылка на Pull Request: https://github.com/elen-jagger/rsschool-cv/pull/4): есть ссылка на задание, скриншот страницы СV, ссылка на деплой страницы CV на GitHub Pages, выполнена самооценка (самооценку расписываем по пунктам критериев оценки, указывая балл за каждый пункт) +10');
-    varconsole.log('видео нет - 0');
-    varconsole.log('дизайн, оформление, качество выполнения CV не ниже чем в примерах CV, приведённых в материалах к заданию  +10');
-        </script>
+        console.log('самооценка 150 баллов');
+        console.log('вёрстка валидная +10');
+        console.log('вёрстка семантическая +20ю В коде страницы присутствуют семантические теги HTML5: article, aside, figure, footer, header, main, nav, section, используются заголовки h1, h2, h3');
+        console.log('для оформления СV используются css-стили +10');
+        console.log('контент размещается в блоке, который горизонтально центрируется на странице. Фонового цвета нет +10');
+        console.log('вёрстка адаптивная: ни на одном из разрешений экрана до 320px включительно не появляется горизонтальная полоса прокрутки, при этом всё содержание страницы сохраняется +10');
+        console.log('есть адаптивное бургер-меню для разрешения 768 и нижею Ссылки в пунктах меню ведут на основные разделы CV. При кликах по пунктам меню реализована плавная прокрутка по якорям. При уменьшении ширины экрана меню становится адаптивным.  +10');
+        console.log('на странице СV присутствует изображение - фото или аватарка автора CV, пропорции изображения не искажены, у изображения есть атрибут alt +10');
+        console.log('контакты для связи и перечень навыков оформлены в виде списка ul > li +10');
+        console.log('CV содержит контакты для связи, краткую информацию о себе, перечень навыков, информацию об образовании и уровне английского +10');
+        console.log('CV содержит пример вашего кода (например, решение задачи с сайта codewars) с подсветкой кода. +10');
+        console.log('CV содержит изображения-ссылки на выполненные вами проекты. При клике по изображению страница проекта открывается в новой вкладке. У каждого проекта есть название, небольшое описание, указан перечень используемых технологий. +10');
+        console.log('CV выполнено на английском языке +10');
+        console.log('выполнены требования к Pull Request (!!! ссылка на Pull Request: https://github.com/elen-jagger/rsschool-cv/pull/4): есть ссылка на задание, скриншот страницы СV, ссылка на деплой страницы CV на GitHub Pages, выполнена самооценка (самооценку расписываем по пунктам критериев оценки, указывая балл за каждый пункт) +10');
+        varconsole.log('видео нет - 0');
+        varconsole.log('дизайн, оформление, качество выполнения CV не ниже чем в примерах CV, приведённых в материалах к заданию  +10');
+    </script>
     </body>
 </html>
 
