fix: implement correct html tags

--- a/index.html
+++ b/index.html
@@ -132,13 +132,12 @@ function rgb(r, g, b){
                         <h3 id="Project">Project</h3>
                         <hr>  
                         <h3>Custom video player</h3>
-                        <p>Video player for Museum project. Made using Html5, CSS3 and Js.</Html></p>                        
+                        <p>Video player for Museum project. Made using Html5, CSS3 and Js.</p>                        
                         <div class="project">
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
                             <img class="project-img" src="./images/video_player.jpg" alt="video player" />
                             </a>
-                        </div>
-                        
+                        </div>                        
                     </article>                                           
                 </section>               
             </main>
