fix: update wording

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>                    
                 <div class="title">
                     <h1>Elena Leusik</h1>
-                    <h2 class="subtitle">Frontend-developer</h2>
+                    <h2 class="subtitle">Junior frontend-developer</h2>
                 </div>
             </header>
             <main>
