feat: add english certificate

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <hr>
                         <ul class="fa-ul">
                             <li><i class="fa-li fa fa-map-marker"></i>Minsk, Belarus</li>
-                            <li><i class="fa-li fa fa-mobile"></i>+375(29)3401875</li>
+                            <li><i class="fa-li fa fa-mobile"></i>+48571084351</li>
                             <li><i class="fa-li fa fa-envelope"></i>elena.leusik@gmail.com</li>
                             <li><i class="fa-li fa fa-github"></i><a href="https://github.com/elen-jagger">elen-jagger</a></li>
                         </ul> 
@@ -50,7 +50,8 @@
                     <article class="aside-article">
                         <h3>English Level</h3>
                         <hr>
-                        <p><strong>B2</strong></p>
+                        <p><strong>C1</strong></p>
+                        <a class="certificate" href="https://www.efset.org/cert/wSuRFt" target="_blank"><img src="./images/certificate.jpg" alt="eng-certificate"></a>
                         <p>
                             Advanced course of medical English in BSMU
                         </p>    
